--- a/accounting/templates/registration.html
+++ b/accounting/templates/registration.html
@@ -28,12 +28,12 @@
     <div class="container section justify-content-center align-items-center" style="padding: 0px">
         <table class="signNav" width="20%">
             <tr>
-                <td style="border-right: 1px solid;">會員登入</td>
-                <td style=" color: lightgray;">會員註冊</td>
+                <td style="border-right: 1px solid; color: lightgray;">會員登入</td>
+                <td>會員註冊</td>
             </tr>
             <tr>
-                <td style="border-right: 1px solid;">Sign in</td>
-                <td style="color: lightgray;">Register</td>
+                <td style="border-right: 1px solid; color: lightgray;">Sign in</td>
+                <td>Register</td>
             </tr>
         </table>
         <table width="30%" style="margin-top: 40px;">
