[dev]register/login func
password加密/ajax

--- a/accounting/static/css/login.css
+++ b/accounting/static/css/login.css
@@ -5,3 +5,25 @@
 .section-input {
     margin-bottom: 20px;
 }
+
+td {
+    font-size: 18px;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#sign-nav td {
+    text-align: center;
+}
+
+#input-table td {
+    vertical-align: text-top;
+}
+
+#input-table .errMsg {
+    font-size: 12px;
+    color: red;
+}
