--- a/accounting/templates/detail.html
+++ b/accounting/templates/detail.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}Detail／明細{% endblock %}
+{% block link_file %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/detail.css' %}">{% endblock %}
 {% block body %}
 <div class="row">
     <!-- Right Container -->
