--- a/accounting/templates/login.html
+++ b/accounting/templates/login.html
@@ -1,51 +1,47 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}登入會員｜RichMan{% endblock %}
+{% block link_file %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+{% endblock %}
 {% block body %}
-<style>
-    .section {
-        height: 60vh;
-    }
-
-    .section-input {
-        margin-bottom: 20px;
-    }
-
-    td {
-        font-size: 18px;
-    }
-
-    table {
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .signNav td {
-        text-align: center;
-        cursor: pointer;
-    }
-</style>
 <div class="row">
     <div class="container section justify-content-center align-items-center" style="padding: 0px">
-        <table class="signNav" width="20%">
-            <tr>
-                <td style="border-right: 1px solid;">會員登入</td>
-                <td style=" color: lightgray;">會員註冊</td>
-            </tr>
-            <tr>
-                <td style="border-right: 1px solid;">Sign in</td>
-                <td style="color: lightgray;">Register</td>
-            </tr>
-        </table>
-        <table width="30%" style="margin-top: 40px;">
-            <form action="/accounting/login/" method="post">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="collapse navbar-collapse">
+                <table id="sign-nav" class="navbar-nav" width="20%">
+                    <tr>
+                        <td style="border-right: 1px solid;" class="nav-item">
+                            <a class="nav-link active" href="#">
+                                <span>會員登入</span>
+                                <span>Sign in</span>
+                            </a>
+                        </td>
+                        <td class="nav-item">
+                            <a href="{% url 'registration' %}" class="nav-link">
+                                <span>會員註冊</span>
+                                <span>Register</span>
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </nav>
+
+        <table width="30%" style="margin-top: 40px;" id="input-table">
+            <form action="{% url 'login' %}" method="post" id="login-form">
                 {% csrf_token %}
                 <tr style="height:60px">
                     <td width="30%" class="section-input">會員帳號</td>
-                    <td width="70%" class="section-input">{{form.account}}</td>
+                    <td width="70%" class="section-input">{{form.account}}
+                        <span class="errMsg" id="acc-errMsg"></span>
+                    </td>
                 </tr>
                 <tr style="height:60px">
                     <td width="30%" class="section-input">會員密碼</td>
-                    <td width="70%" class="section-input">{{form.password}}</td>
+                    <td width="70%" class="section-input">{{form.password}}
+                        <span class="errMsg" id="pwd-errMsg"></span>
+                    </td>
                 </tr>
                 <tr>
                     <td colspan="2" class="section-input text-center">
@@ -58,4 +54,45 @@
         </table>
     </div>
 </div>
+{% endblock %}
+
+{% block js_script %}
+<script>
+    $(function () {
+        $('#login-form').submit(function (event) {
+            event.preventDefault();
+            if (isValidate()) {
+                $.ajax({
+                    type: "POST",
+                    url: "{% url 'login' %}",
+                    headers: { 'X-CSRFToken': getCookie('csrftoken') },
+                    data: $(this).serialize(),
+                    success: function (response) {
+                        if (response.success) {
+                            window.location.href = '{% url "detail" %}';
+                        } else {
+                            alert(response.errors);
+                            $("#{{form.password.auto_id}}").val("");
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("發生錯誤:" + error);
+                    }
+                });
+            }
+        });
+    })
+    function isValidate() {
+        flag = true;
+        if ($(`#{{form.account.auto_id}}`).val().length == 0) {
+            $("#acc-errMsg").val("請輸入Email");
+            flag = false;
+        }
+        if ($(`#{{form.password.auto_id}}`).val().length == 0) {
+            $("#pwd-errMsg").val("請輸入密碼");
+            flag = false;
+        }
+        return flag
+    }
+</script>
 {% endblock %}
