--- a/accounting/templates/base.html
+++ b/accounting/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-5.0.0-dist/css/bootstrap.min.css' %}">
     <script src="{% static 'bootstrap-5.0.0-dist/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery.slim.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
     <title>{% block title %}RichMan{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
@@ -50,6 +50,7 @@
                             </div>
                             <div class="navbar-nav ml-auto">
                                 <a class="nav-item nav-link" href="#">使用者</a>
+                                <a class="nav-item nav-link" href="{% url 'logout' %}">登出</a>
                             </div>
                         </div>
                     </nav>
