--- a/accounting/static/css/login.css
+++ b/accounting/static/css/login.css
@@ -15,6 +15,12 @@ table {
     margin-right: auto;
 }
 
+
+
+#sign-nav span {
+    display: block;
+}
+
 #sign-nav td {
     text-align: center;
 }
@@ -26,4 +32,12 @@ table {
 #input-table .errMsg {
     font-size: 12px;
     color: red;
+}
+
+@media (max-width: 900px) {
+
+    /* 手機螢幕大小 */
+    td {
+        font-size: 15px;
+    }
 }
