--- a/accounting/templates/detail.html
+++ b/accounting/templates/detail.html
@@ -39,27 +39,27 @@
     <div class="col-sm-10 col-12">
         <!-- tool bar -->
         <div class="col-12 row" style="margin: 0; padding-left: 0;">
-            <div class="col-sm-12 d-sm-block d-none text-right">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#insertModal">
-                    新增
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="insertModal" tabindex="-1" aria-labelledby="insertModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="insertModalLabel">新增收支</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                {% include './form-expense.html' %}
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-dark" id="modal-insert-btn">新增</button>
-                            </div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#insertModal">
+                新增
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="insertModal" tabindex="-1" role="dialog" aria-labelledby="insertModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="insertModalLabel">新增收支</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            {% include './form-expense.html' %}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-dark" id="modal-insert-btn">新增</button>
                         </div>
                     </div>
                 </div>
