--- a/accounting/templates/login.html
+++ b/accounting/templates/login.html
@@ -1,62 +1,36 @@
-{% extends "base.html" %}
+{% extends "login-base.html" %}
 {% load static %}
 {% block title %}登入會員｜RichMan{% endblock %}
 {% block link_file %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+{{ block.super }}
 {% endblock %}
-{% block body %}
-<div class="row">
-    <div class="container section justify-content-center align-items-center" style="padding: 0px">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="collapse navbar-collapse">
-                <table id="sign-nav" class="navbar-nav" width="20%">
-                    <tr>
-                        <td style="border-right: 1px solid;" class="nav-item">
-                            <a class="nav-link active" href="#">
-                                <span>會員登入</span>
-                                <span>Sign in</span>
-                            </a>
-                        </td>
-                        <td class="nav-item">
-                            <a href="{% url 'registration' %}" class="nav-link">
-                                <span>會員註冊</span>
-                                <span>Register</span>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </nav>
-
-        <table width="30%" style="margin-top: 40px;" id="input-table">
-            <form action="{% url 'login' %}" method="post" id="login-form">
-                {% csrf_token %}
-                <tr style="height:60px">
-                    <td width="30%" class="section-input">會員帳號</td>
-                    <td width="70%" class="section-input">{{form.account}}
-                        <span class="errMsg" id="acc-errMsg"></span>
-                    </td>
-                </tr>
-                <tr style="height:60px">
-                    <td width="30%" class="section-input">會員密碼</td>
-                    <td width="70%" class="section-input">{{form.password}}
-                        <span class="errMsg" id="pwd-errMsg"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" class="section-input text-center">
-                        <button type="submit" class="btn btn-outline-secondary" style="width: 130px; height: 50px;">
-                            登入
-                        </button>
-                    </td>
-                </tr>
-            </form>
-        </table>
-    </div>
-</div>
+{% block form_body %}
+<form action="{% url 'login' %}" method="post" id="login-form">
+    {% csrf_token %}
+    <tr style="height:60px">
+        <td width="30%" class="section-input">會員帳號</td>
+        <td width="70%" class="section-input">{{form.account}}
+            <span class="errMsg" id="acc-errMsg"></span>
+        </td>
+    </tr>
+    <tr style="height:60px">
+        <td width="30%" class="section-input">會員密碼</td>
+        <td width="70%" class="section-input">{{form.password}}
+            <span class="errMsg" id="pwd-errMsg"></span>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" class="section-input text-center">
+            <button type="submit" class="btn btn-outline-secondary" style="width: 130px; height: 50px;">
+                登入
+            </button>
+        </td>
+    </tr>
+</form>
 {% endblock %}
 
 {% block js_script %}
+{{ block.super }}
 <script>
     $(function () {
         $('#login-form').submit(function (event) {
