--- a/accounting/templates/registration.html
+++ b/accounting/templates/registration.html
@@ -1,82 +1,54 @@
-{% extends "base.html" %}
+{% extends "login-base.html" %}
 {% load static %}
 {% block title %}登入會員｜RichMan{% endblock %}
 {% block link_file %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+{{ block.super }}
 {% endblock %}
-{% block body %}
-<style>
-</style>
-<div class="row">
-    <div class="container section justify-content-center align-items-center" style="padding: 0px">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="collapse navbar-collapse">
-                <table id="sign-nav" class="navbar-nav" width="20%">
-                    <tr>
-                        <td style="border-right: 1px solid;" class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">
-                                <span>會員登入</span>
-                                <span>Sign in</span>
-                            </a>
-                        </td>
-                        <td class="nav-item">
-                            <a href="#" class="nav-link active">
-                                <span>會員註冊</span>
-                                <span>Register</span>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </nav>
-
-        <table width="30%" style="margin-top: 40px;" id="input-table">
-            <form id="register-form">
-                {% csrf_token %}
-                <tr style="height:60px">
-                    <td width="30%" class="section-input">會員帳號</td>
-                    <td width="70%" class="section-input">
-                        {{form.account}}
-                        {% for error in form.account.errors %}
-                        <span class="errMsg">{{ error }}</span>
-                        {% endfor %}
-                        <span class="errMsg" id="acc-errMsg"></span>
-                    </td>
-                </tr>
-                <tr style="height:60px">
-                    <td width="30%" class="section-input">密碼</td>
-                    <td width="70%" class="section-input">
-                        {{form.password}}
-                        {% for error in form.password.errors %}
-                        <span class="errMsg">{{ error }}</span>
-                        {% endfor %}
-                        <span class="errMsg" id="pwd-errMsg"></span>
-                    </td>
-                </tr>
-                <tr style="height:60px">
-                    <td width="30%" class="section-input">確認密碼</td>
-                    <td width="70%" class="section-input">
-                        {{form.confirm_password}}
-                        {% for error in form.confirm_password.errors %}
-                        <span class="errMsg">{{ error }}</span>
-                        {% endfor %}
-                        <span class="errMsg" id="pwd2-errMsg"></span>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" class="section-input text-center">
-                        <button type="submit" class="btn btn-outline-secondary" style="width: 130px; height: 50px;">
-                            繼續註冊
-                        </button>
-                    </td>
-                </tr>
-            </form>
-        </table>
-    </div>
-</div>
+{% block form_body %}
+<form id="register-form">
+    {% csrf_token %}
+    <tr style="height:60px">
+        <td width="30%" class="section-input">會員帳號</td>
+        <td width="70%" class="section-input">
+            {{form.account}}
+            {% for error in form.account.errors %}
+            <span class="errMsg">{{ error }}</span>
+            {% endfor %}
+            <span class="errMsg" id="acc-errMsg"></span>
+        </td>
+    </tr>
+    <tr style="height:60px">
+        <td width="30%" class="section-input">密碼</td>
+        <td width="70%" class="section-input">
+            {{form.password}}
+            {% for error in form.password.errors %}
+            <span class="errMsg">{{ error }}</span>
+            {% endfor %}
+            <span class="errMsg" id="pwd-errMsg"></span>
+        </td>
+    </tr>
+    <tr style="height:60px">
+        <td width="30%" class="section-input">確認密碼</td>
+        <td width="70%" class="section-input">
+            {{form.confirm_password}}
+            {% for error in form.confirm_password.errors %}
+            <span class="errMsg">{{ error }}</span>
+            {% endfor %}
+            <span class="errMsg" id="pwd2-errMsg"></span>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" class="section-input text-center">
+            <button type="submit" class="btn btn-outline-secondary" style="width: 130px; height: 50px;">
+                繼續註冊
+            </button>
+        </td>
+    </tr>
+</form>
 {% endblock %}
 
 {% block js_script %}
+{{ block.super }}
 <script>
     $(function () {
         $(`#{{form.password.auto_id}}`).change(function () {
